# dfm_site

./: .dockerignore  .eslintignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.builder-gnu  Dockerfile.builder-musl  README.md  app.config.ts  astro.config.mjs  biome.json  build.sh  bun.lockb  deploy.sh  docker-compose.debug.yml  docker-compose.yml  global.d.ts  globals.d.ts  index.html  package.json  pnpm-lock.yaml  postcss.config.js  push.sh  reset.d.ts  rustfmt.toml  styles.css  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
.devcontainer/: devcontainer.json
.github/workflows/: build_deploy_to_pages.yml
adapters/client/: vite.config.ts
adapters/express/: vite.config.ts
adapters/server/: vite.config.ts
app/: Cargo.toml
app/src/: app.rs  controls.rs  home.rs  lib.rs  player.rs
app/src/components/: controls.rs  player.rs
app/src/routes/: home.rs  uzg.rs
certs/: cert.pem  key.pem
frontend/src/: lib.rs
public/: styles.css
server/: Cargo.toml
server/src/: fileserv.rs  main.rs
src/: app.rs  app.tsx  controls.rs  entry-server.tsx  entry.dev.tsx  entry.express.tsx  entry.ssr.tsx  env.d.ts  error_template.rs  fileserv.rs  ftp.ts  global.css  global.d.ts  groupby.ts  home.rs  lib.rs  main.rs  root.tsx  stores.ts  stream.ts  uzg.rs  uzg.ts
src/components/: ButtonAudio.astro  ButtonAudio.tsx  ButtonVideo.astro  ButtonVideo.tsx  Contactbar.astro  Controls.tsx  Picture.tsx  Player.tsx  Video.astro  Video.tsx  contactbar.tsx  controls.rs  controls.tsx  mod.rs  picture.tsx  player.rs  uitzendinggemist.tsx  uzg-listing.tsx  uzg-player.tsx
src/layouts/: DfmLayout.astro
style/: dfm.in.css  dfm.out.css  styles.in.css
(+21 files in other folders)
