[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = ["ssr"] }
leptos_axum.workspace = true
leptos_image = { workspace = true, features = ["ssr"] }
axum.workspace = true
simple_logger.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http = { version = "0.4.0", features = [
  "full",
  "fs",
  "compression-br",
  "compression-deflate",
  "compression-gzip",
  "trace",
] }
log.workspace = true
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
console-subscriber = { version = "0.1.10" }
